<resources>
    <string name="app_name">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="tu_jian" translatable="false">图鉴</string>
    <string name="pin_tu" translatable="false">拼图</string>
    <string name="sao_miao_ka_pai" translatable="false">扫描卡牌</string>
    <string name="pai_zhao" translatable="false">拍照</string>
    <string name="xiang_ce" translatable="false">相册</string>
</resources>
